vbnc/vbnc/vbnc/tests/Errors/30039.vb
Module bug
    ReadOnly Property I() As Integer
        Get

        End Get
    End Property
    Sub Main()
        For i = 1 To 2

        Next
    End Sub
End Module